WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65252
[GTK] Copy and paste is broken in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=65252
Summary
[GTK] Copy and paste is broken in WebKit2
Carlos Garcia Campos
Reported
2011-07-27 06:24:16 PDT
The problem is that PasteboardHelper uses page client widget to get the GtkClipboard.
Attachments
Patch
(2.54 KB, patch)
2011-07-27 06:29 PDT
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2011-07-27 06:29:52 PDT
Created
attachment 102139
[details]
Patch Use gtk_clipboard_get_for_display() instead of gtk_widget_get_clipboard().
Martin Robinson
Comment 2
2011-07-27 19:30:04 PDT
Comment on
attachment 102139
[details]
Patch Seems reasonable.
Carlos Garcia Campos
Comment 3
2011-07-28 08:22:55 PDT
Committed
r91929
: <
http://trac.webkit.org/changeset/91929
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug