[GTK] Copy and paste is broken in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=65252

Reviewed by Martin Robinson.

Use gtk_clipboard_get_for_display() instead of
gtk_widget_get_clipboard(), using the the default display when
there's no page client widget, which is the case of WebKit2.

* platform/gtk/PasteboardHelper.cpp:
(WebCore::displayFromFrame): Return the display of the current
frame widget or the default display if there's no widget.
(WebCore::PasteboardHelper::getClipboard):
(WebCore::PasteboardHelper::getPrimarySelectionClipboard):

Canonical link: https://commits.webkit.org/81090@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91929 268f45cc-cd09-0410-ab3c-d52691b4dbfc